bat.bool1.parottrouble.ParotTrouble.scala.error
Erreur de compilation :
ParotTrouble:6: error: type mismatch;
 found   : Unit
 required: Boolean
    if(hour >= 20) {
    ^